--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@ body {
   margin: 0;
 }
 h1 {
-  font-size: 40px;
+  font-size: 3.5vw;
   font-weight: 700;
   text-transform: uppercase;
   font-family: 'Montserrat', sans-serif;
 }
 p {
-  font-size: 20px;
+  font-size: 1.75vw;
   font-weight: 400;
   font-family: 'Open Sans', sans-serif;
 }
@@ -19,7 +19,7 @@ p {
 .wrapper {
   position: relative;
   width: 100vw;
-  height: 100vh;
+  height: 60vw;
   background: linear-gradient(90deg, #253640 10%, rgba(31, 73, 96, 0) 81.42%), url(img/nastuh-abootalebi-ZtC4_rPCRXA-unsplash\ 1.jpg) no-repeat;
   background-position: left center;
   background-size: cover;
@@ -38,13 +38,9 @@ p {
   opacity: .6;
 }
 #vector {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  object-fit: cover;
-  object-position: left center;
+  width: 100%;
+  height: 100%;
+  transform: scale(1.035);
 }
 .banner-container {
   position: absolute;
@@ -55,29 +51,4 @@ p {
 }
 .banner-subtitle {
   width: 45vw;
-}
-
-@media (max-width: 1088px) {
-  h1 {
-    font-size: 36px;
-  }
-  p {
-    font-size: 18px;
-  }
-}
-@media (max-width: 721px) {
-  h1 {
-    font-size: 32px;
-  }
-  p {
-    font-size: 16px;
-  }
-  .banner-subtitle {
-    width: 65vw;
-  }
-}
-@media (max-width: 426px) {
-  .banner-subtitle {
-    width: 80vw;
-  }
 }
